--- a/assets/Zhou/cart_ws/src/.vscode/settings.json
+++ b/assets/Zhou/cart_ws/src/.vscode/settings.json
@@ -8,5 +8,6 @@
         "/home/mark/fa1k0or.github.io/assets/Zhou/cart_ws/install/cart_base/lib/python3.10/site-packages",
         "/opt/ros/humble/lib/python3.10/site-packages",
         "/opt/ros/humble/local/lib/python3.10/dist-packages"
-    ]
+    ],
+    "ros.distro": "foxy"
 }
